Git Tests/force-app/main/default/default/objects/Account/fields/Bloqueado__c.field-meta.xml
<CustomField>
    <fullName>Bloqueado__c</fullName>
    <label>Ativo?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ativo</fullName>
            </value>
            <value>
                <fullName>Inativo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>