Git Tests/force-app/main/default/default/objects/Account/fields/CEPFml__c.field-meta.xml
<CustomField>
    <fullName>CEPFml__c</fullName>
    <formula>IF(LEN(CEP__c) = 8,
LEFT(CEP__c, 5) &amp; &quot;-&quot; &amp; RIGHT(CEP__c, 3),
CEP__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CEP</label>
    <type>Text</type>
</CustomField>