Git Tests/force-app/main/default/default/objects/Account/fields/ClasseCredito__c.field-meta.xml
<CustomField>
    <fullName>ClasseCredito__c</fullName>
    <label>Classe de crédito do cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>