Git Tests/force-app/main/default/default/objects/Account/fields/CNPJFml__c.field-meta.xml
<CustomField>
    <fullName>CNPJFml__c</fullName>
    <formula>IF(LEN(CNPJ__c) = 14,
LEFT(CNPJ__c, 2) &amp; &quot;.&quot; &amp; LEFT(RIGHT(CNPJ__c, 12), 3) &amp; &quot;.&quot; &amp; LEFT(RIGHT(CNPJ__c, 9), 3) &amp; &quot;/&quot; &amp; LEFT(RIGHT(CNPJ__c, 6), 4) &amp; &quot;-&quot; &amp; RIGHT(CNPJ__c, 2),
CNPJ__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CNPJ</label>
    <type>Text</type>
</CustomField>