Git Tests/force-app/main/default/default/objects/Account/fields/CodigoCliente__c.field-meta.xml
<CustomField>
    <fullName>CodigoCliente__c</fullName>
    <label>Código do cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>