Git Tests/force-app/main/default/default/objects/Account/fields/CodigoEspecialidadeMedico__c.field-meta.xml
<CustomField>
    <fullName>CodigoEspecialidadeMedico__c</fullName>
    <label>Código da especialidade do médico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>