Git Tests/force-app/main/default/default/objects/Account/fields/CodigoGrupoClientes__c.field-meta.xml
<CustomField>
    <fullName>CodigoGrupoClientes__c</fullName>
    <label>Código do grupo de clientes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>