Git Tests/force-app/main/default/default/objects/Account/fields/CodigoLoja__c.field-meta.xml
<CustomField>
    <fullName>CodigoLoja__c</fullName>
    <formula>CodigoCliente__c &amp; &quot;/&quot; &amp; LojaCliente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código/loja</label>
    <type>Text</type>
</CustomField>