Git Tests/force-app/main/default/default/objects/Account/fields/CodigoMedico__c.field-meta.xml
<CustomField>
    <fullName>CodigoMedico__c</fullName>
    <description>Campo para chave do médico (UF + CRM/CRO)</description>
    <externalId>true</externalId>
    <label>Código do médico</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>