Git Tests/force-app/main/default/default/objects/Account/fields/CodigoMunicipio__c.field-meta.xml
<CustomField>
    <fullName>CodigoMunicipio__c</fullName>
    <label>Código do município</label>
    <length>255</length>
    <type>Text</type>
</CustomField>