Git Tests/force-app/main/default/default/objects/Account/fields/CodigoRegiao__c.field-meta.xml
<CustomField>
    <fullName>CodigoRegiao__c</fullName>
    <label>Código da Região</label>
    <length>10</length>
    <type>Text</type>
</CustomField>