Git Tests/force-app/main/default/default/objects/Account/fields/ComplementoEndereco__c.field-meta.xml
<CustomField>
    <fullName>ComplementoEndereco__c</fullName>
    <label>Complemento do endereço</label>
    <length>50</length>
    <type>Text</type>
</CustomField>