Git Tests/force-app/main/default/default/objects/Account/fields/ContatoRecebimento__c.field-meta.xml
<CustomField>
    <fullName>ContatoRecebimento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contato de recebimento</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contas</relationshipLabel>
    <relationshipName>Contas</relationshipName>
    <type>Lookup</type>
</CustomField>