Git Tests/force-app/main/default/default/objects/Account/fields/Contribuinte__c.field-meta.xml
<CustomField>
    <fullName>Contribuinte__c</fullName>
    <label>Contribuinte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SimNao</valueSetName>
    </valueSet>
</CustomField>