Git Tests/force-app/main/default/default/objects/Account/fields/CPFFml__c.field-meta.xml
<CustomField>
    <fullName>CPFFml__c</fullName>
    <formula>IF(LEN(CPF__c) = 11,
LEFT(CPF__c, 3) &amp; &quot;.&quot; &amp; LEFT(RIGHT(CPF__c, 8), 3) &amp; &quot;.&quot; &amp; LEFT(RIGHT(CPF__c, 5), 3) &amp; &quot;-&quot; &amp; RIGHT(CPF__c, 2),
CPF__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPF</label>
    <type>Text</type>
</CustomField>