Git Tests/force-app/main/default/default/objects/Account/fields/Deletado__c.field-meta.xml
<CustomField>
    <fullName>Deletado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deletado</label>
    <type>Checkbox</type>
</CustomField>