Git Tests/force-app/main/default/default/objects/Account/fields/DescontoCliente__c.field-meta.xml
<CustomField>
    <fullName>DescontoCliente__c</fullName>
    <label>Desconto do cliente</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>