Git Tests/force-app/main/default/default/objects/Account/fields/Documento__c.field-meta.xml
<CustomField>
    <fullName>Documento__c</fullName>
    <formula>IF(RecordType.Name = &apos;Pessoa física&apos;, CPF__c, CNPJ__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CNPJ/CPF</label>
    <type>Text</type>
</CustomField>