Git Tests/force-app/main/default/default/objects/Account/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email</label>
    <type>TextArea</type>
</CustomField>