Git Tests/force-app/main/default/default/objects/Account/fields/EnderecoEntrega__c.field-meta.xml
<CustomField>
    <fullName>EnderecoEntrega__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Endereço de entrega</label>
    <referenceTo>EnderecoEntrega__c</referenceTo>
    <relationshipLabel>Clientes</relationshipLabel>
    <relationshipName>Clientes</relationshipName>
    <type>Lookup</type>
</CustomField>