Git Tests/force-app/main/default/default/objects/Account/fields/EspecialidadeMedico__c.field-meta.xml
<CustomField>
    <fullName>EspecialidadeMedico__c</fullName>
    <label>Especialidade do médico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>