Git Tests/force-app/main/default/default/objects/Account/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>14</length>
    <type>Text</type>
</CustomField>