Git Tests/force-app/main/default/default/objects/Account/fields/FormaPagamento__c.field-meta.xml
<CustomField>
    <fullName>FormaPagamento__c</fullName>
    <label>Forma de pagamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>