Git Tests/force-app/main/default/default/objects/Account/fields/GeraBoleto__c.field-meta.xml
<CustomField>
    <fullName>GeraBoleto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gera boleto</label>
    <type>Checkbox</type>
</CustomField>