Git Tests/force-app/main/default/default/objects/Account/fields/GrauRisco__c.field-meta.xml
<CustomField>
    <fullName>GrauRisco__c</fullName>
    <inlineHelpText>A - Nunca bloqueia o cliente, independente de atrasos ou limites; 
B - Usado para órgãos públicos - Só bloqueia o cliente após 90 dias de atraso; 
C - Bloqueia com 15 dias de atraso; 
D - Bloqueia com 5 dias de atraso; 
E - Sempre bloqueado.</inlineHelpText>
    <label>Grau de risco do cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>