Git Tests/force-app/main/default/default/objects/Account/fields/GrupoCliente__c.field-meta.xml
<CustomField>
    <fullName>GrupoCliente__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Grupo de clientes</label>
    <referenceTo>GrupoCliente__c</referenceTo>
    <relationshipLabel>Clientes</relationshipLabel>
    <relationshipName>Clientes</relationshipName>
    <type>Lookup</type>
</CustomField>