Git Tests/force-app/main/default/default/objects/Account/fields/Identification__c.field-meta.xml
<CustomField>
    <fullName>Identification__c</fullName>
    <formula>IF( ISBLANK(CNPJ__c), CPF__c, CNPJ__c)</formula>
    <label>Identification</label>
    <type>Text</type>
</CustomField>