Git Tests/force-app/main/default/default/objects/Account/fields/InscricaoMunicipal__c.field-meta.xml
<CustomField>
    <fullName>InscricaoMunicipal__c</fullName>
    <label>Inscrição municipal</label>
    <length>18</length>
    <type>Text</type>
</CustomField>