Git Tests/force-app/main/default/default/objects/Account/fields/KeyAccount__c.field-meta.xml
<CustomField>
    <fullName>KeyAccount__c</fullName>
    <label>Key account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SimNao</valueSetName>
    </valueSet>
</CustomField>