Git Tests/force-app/main/default/default/objects/Account/fields/LimiteCredito__c.field-meta.xml
<CustomField>
    <fullName>LimiteCredito__c</fullName>
    <label>Limite de crédito</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>