Git Tests/force-app/main/default/default/objects/Account/fields/LojaCliente__c.field-meta.xml
<CustomField>
    <fullName>LojaCliente__c</fullName>
    <label>Loja do cliente</label>
    <length>4</length>
    <type>Text</type>
</CustomField>