Git Tests/force-app/main/default/default/objects/Account/fields/NomeFantasia__c.field-meta.xml
<CustomField>
    <fullName>NomeFantasia__c</fullName>
    <label>Nome fantasia</label>
    <length>150</length>
    <type>Text</type>
</CustomField>