Git Tests/force-app/main/default/default/objects/Account/fields/NomeGrupoClientes__c.field-meta.xml
<CustomField>
    <fullName>NomeGrupoClientes__c</fullName>
    <label>Nome do grupo de clientes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>