Git Tests/force-app/main/default/default/objects/Account/fields/NumeroRegistro__c.field-meta.xml
<CustomField>
    <fullName>NumeroRegistro__c</fullName>
    <inlineHelpText>CRM/CRO</inlineHelpText>
    <label>Número do registro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>