Git Tests/force-app/main/default/default/objects/Account/fields/OutroTelefone__c.field-meta.xml
<CustomField>
    <fullName>OutroTelefone__c</fullName>
    <label>Outro telefone</label>
    <type>Phone</type>
</CustomField>