Git Tests/force-app/main/default/default/objects/Account/fields/Saldo__c.field-meta.xml
<CustomField>
    <fullName>Saldo__c</fullName>
    <formula>LimiteCredito__c  -  IF(ISBLANK(Titulos__c), 0, VALUE(Titulos__c))</formula>
    <inlineHelpText>Limite de crédito - Títulos</inlineHelpText>
    <label>Saldo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>