Git Tests/force-app/main/default/default/objects/Account/fields/SaldoFinanceiroAberto__c.field-meta.xml
<CustomField>
    <fullName>SaldoFinanceiroAberto__c</fullName>
    <label>Saldo</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>