Git Tests/force-app/main/default/default/objects/Account/fields/ScoreCliente__c.field-meta.xml
<CustomField>
    <fullName>ScoreCliente__c</fullName>
    <label>Score do cliente</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>