Git Tests/force-app/main/default/default/objects/Account/fields/TabelaPrecos__c.field-meta.xml
<CustomField>
    <fullName>TabelaPrecos__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tabela de preços</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Contas</relationshipLabel>
    <relationshipName>Contas</relationshipName>
    <type>Lookup</type>
</CustomField>