Git Tests/force-app/main/default/default/objects/Account/fields/Telefone__c.field-meta.xml
<CustomField>
    <fullName>Telefone__c</fullName>
    <formula>IF(LEN(Phone) = 8, 
   LEFT(Phone, 4) &amp; &quot;-&quot; &amp; RIGHT(Phone, 4),
   IF(LEN(Phone) = 9, 
      LEFT(Phone, 5) &amp; &quot;-&quot; &amp; RIGHT(Phone, 4),
      IF(LEN(Phone) = 11, 
         &quot;(&quot; &amp; LEFT(Phone, 2) &amp; &quot;) - &quot; &amp; LEFT(RIGHT(Phone, 9), 5) &amp; &quot; - &quot; &amp; RIGHT(Phone, 4), 
         Phone
      ) 
   ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Telefone</label>
    <type>Text</type>
</CustomField>