Git Tests/force-app/main/default/default/objects/Account/fields/TipoCliente__c.field-meta.xml
<CustomField>
    <fullName>TipoCliente__c</fullName>
    <label>Tipo do cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>