Git Tests/force-app/main/default/default/objects/Account/fields/TipoConselho__c.field-meta.xml
<CustomField>
    <fullName>TipoConselho__c</fullName>
    <label>Tipo do conselho</label>
    <length>255</length>
    <type>Text</type>
</CustomField>