Git Tests/force-app/main/default/default/objects/Account/fields/TipoFrete__c.field-meta.xml
<CustomField>
    <fullName>TipoFrete__c</fullName>
    <label>Tipo do frete</label>
    <length>255</length>
    <type>Text</type>
</CustomField>