Git Tests/force-app/main/default/default/objects/Account/fields/Titulos__c.field-meta.xml
<CustomField>
    <fullName>Titulos__c</fullName>
    <label>Títulos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>