Git Tests/force-app/main/default/default/objects/Account/fields/Transportadora__c.field-meta.xml
<CustomField>
    <fullName>Transportadora__c</fullName>
    <label>Transportadora</label>
    <length>6</length>
    <type>Text</type>
</CustomField>