Git Tests/force-app/main/default/default/objects/Account/fields/UFRegistroMedico__c.field-meta.xml
<CustomField>
    <fullName>UFRegistroMedico__c</fullName>
    <label>UF do registro do médico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UnidadeFederativa</valueSetName>
    </valueSet>
</CustomField>