Git Tests/force-app/main/default/default/objects/Account/fields/VencimentoLimiteCredito__c.field-meta.xml
<CustomField>
    <fullName>VencimentoLimiteCredito__c</fullName>
    <label>Vencimento do limite de crédito</label>
    <type>Date</type>
</CustomField>