Git Tests/force-app/main/default/default/objects/Account/recordTypes/Medico.recordType-meta.xml
<RecordType>
    <fullName>Medico</fullName>
    <active>true</active>
    <label>Médico</label>
</RecordType>