Git Tests/force-app/main/default/default/objects/Account/recordTypes/PessoaFisica.recordType-meta.xml
<RecordType>
    <fullName>PessoaFisica</fullName>
    <active>true</active>
    <label>Pessoa física</label>
</RecordType>