Git Tests/force-app/main/default/default/objects/Account/recordTypes/PreConta.recordType-meta.xml
<RecordType>
    <fullName>PreConta</fullName>
    <active>true</active>
    <label>Pré-Conta</label>
</RecordType>