Git Tests/force-app/main/default/default/objects/Account/validationRules/Cliente_BloquearEdicaoNomeCliente.validationRule-meta.xml
<ValidationRule>
    <fullName>Cliente_BloquearEdicaoNomeCliente</fullName>
    <active>true</active>
    <description>Regra de validação para impedir a edição do campo &quot;Nome do cliente&quot;, que não possui a possibilidade de bloquear pelo layout ou pela segurança de campos.</description>
    <errorConditionFormula>AND(
    $Profile.Name != &apos;Administrador do sistema&apos;,
    ISCHANGED(Name)
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>O campo &quot;Nome do cliente&quot; não pode ser editado.</errorMessage>
</ValidationRule>