Git Tests/force-app/main/default/default/objects/Account/validationRules/Permitirsomenteumcontato.validationRule-meta.xml
<ValidationRule>
    <fullName>Permitirsomenteumcontato</fullName>
    <active>false</active>
    <description>Permitir somente um contato</description>
    <errorConditionFormula>AND(
NOT( ISBLANK( ContatoRecebimento__c )),
ContatoRecebimento__r.Padrao__c )</errorConditionFormula>
    <errorMessage>Permitir somente um contato padrão em cada registro de cliente</errorMessage>
</ValidationRule>