Git Tests/force-app/main/default/default/objects/Account/listViews/Org_Account_Hierarchy.listView-meta.xml
<ListView>
    <fullName>Org_Account_Hierarchy</fullName>
    <columns>CodigoCliente__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>LojaCliente__c</columns>
    <columns>CNPJ__c</columns>
    <columns>TipoCliente__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <filterScope>Everything</filterScope>
    <label>Todos os clientes</label>
</ListView>